--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="xanhla">#89FF00</color>
+    <color name="xam">#909090</color>
+    <color name="cam">#FF0000</color>
+    <color name="vang">#FFC107</color>
 </resources>
