--- a/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
+++ b/app/src/main/res/layout/activity_man_hinh_khach_hang.xml
@@ -15,11 +15,21 @@
         app:titleTextColor="@color/white"
         app:menu="@menu/menu_toolbar"
         />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rscSp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"/>
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_KhachHang"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        >
+
+    </androidx.fragment.app.FragmentContainerView>
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
