--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -56,7 +56,7 @@
                 android:textStyle="normal" />
 
             <TextView
-                android:id="@+id/tv_mamsp_show"
+                android:id="@+id/tv_namsp_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Năm sản xuất"
