--- a/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
+++ b/app/src/main/res/layout/activity_man_hinh_nhan_vien.xml
@@ -15,6 +15,11 @@
         android:id="@+id/toolbar_nhanvien"
         app:menu="@menu/menu_toolbar"
         />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rscSp_Nhanvien"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"/>
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fcv_Nhanvien"
         android:layout_width="match_parent"
