--- a/app/src/main/res/layout/fragment_frg_quan_ly_hoa_don.xml
+++ b/app/src/main/res/layout/fragment_frg_quan_ly_hoa_don.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/xanhla"
+    android:background="@color/white"
     tools:context=".frm.fragment_quanlyhoadon_nhanvien"
 
     >
