--- a/API/views/product/list-product.ejs
+++ b/API/views/product/list-product.ejs
@@ -10,49 +10,44 @@
 
 <body>
     <%- include('../inc/header') %>
-        <table border="1" class="table table-bordered border-black ">
+    <td>
+        <a href="/apiadmin/product/add/" target="_blank">
+            <button type="submit" class="btn btn-success w-30">Add new Product </button>
+        </a>
+    </td>
+    <table border="1" class="table table-bordered border-black w-100">
+        <thead>
             <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Image</th>
-                <th scope="col">Price</th>
-                <th scope="col">Product detail</th>
-                <th scope="col">Sửa sản phẩm</th>
-                <th scope="col">Xóa sản phẩm </th>
+                <th scope="col" style="width: 10%;">ID</th>
+                <th scope="col" style="width: 10%;">Name</th>
+                <th scope="col" style="width: 10%;">Image</th>
+                <th scope="col" style="width: 10%;">Price</th>
+                <th scope="col" style="width: 10%;">Action</th>
             </tr>
-            <% listSP.forEach( (row)=>{ %>
+        </thead>
+        <tbody>
+            <% listSP.forEach((row) => { %>
                 <tr>
-                    <td>
-                        <%= row._id %>
-                    </td>
-                    <td>
-                        <%= row.NameProduct %>
-                    </td>
-                    <td><img src="<%= row.Image%>" width="50"  />
-                    </td>
-                    <td>
-                        <%= row.Price %>
-                    </td>
-                    <td>
-                        <a href="/apiadmin/product/add/" target="_blank">
-                            <button type="submit" class="btn btn-success w-100"> Thêm </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="/apiadmin/product/edit/<%= row._id %>" target="_blank">
-                            <button type="submit" class="btn btn-warning w-100 "> Sửa </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="/apiadmin/product/delete/<%= row._id %>"
-                            onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?')"><button type="submit"
-                                class="btn btn-danger w-100">Xóa</button></a>
+                    <td><%= row._id %></td>
+                    <td><%= row.NameProduct %></td>
+                    <td class="text-center"><img src="<%= row.Image %>" width="100%" /></td>
+                    <td><%= row.Price %></td>
+                    <td class="text-center">
+                        <div class="btn-group" role="group">
+                            <a href="/apiadmin/product/edit/<%= row._id %>" target="_blank">
+                                <button type="submit" class="btn btn-warning w-100">Sửa</button>
+                            </a>
+                            <a href="/apiadmin/product/delete/<%= row._id %>"
+                                onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?')">
+                                <button type="submit" class="btn btn-danger w-100">Xóa</button>
+                            </a>
+                        </div>
                     </td>
                 </tr>
-                <% }) %>
-        </table>
-        <%- include('../inc/footer') %>
-
+            <% }) %>
+        </tbody>
+    </table>
+    <%- include('../inc/footer') %>
 </body>
 
 </html>
