--- a/API/views/category/add-category.ejs
+++ b/API/views/category/add-category.ejs
@@ -1,6 +1,30 @@
-<h1>Thêm mới sản phẩm</h1>
-<form action="" method="post">
-    <p><%= smg  %></p>
-    Nhập vào loại : <input type="text" name="NameCategory" id="NameCategory"> <br>
-    <button type="submit">Thêm mới</button>
-</form> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="text-center">
+        <h1>Add new category </h1>
+        <form action="" method="post" class="form-control w-50 m-lg-auto bg-secondary">
+            <p>
+                <%= smg %>
+            </p>
+
+            <div class="input-group flex-nowrap mb-1">
+                <span class="input-group-text" id="addon-wrapping">Loại </span>
+                <input type="text" class="form-control" placeholder="Nhập vào loại " aria-label="NameCategory"
+                    aria-describedby="addon-wrapping" name="NameCategory" id="NameCategory">
+            </div>
+            <button type="submit">Add new category </button>
+        </form>
+    </div>
+
+</body>
+
+</html>
