--- a/API/views/category/update-category.ejs
+++ b/API/views/category/update-category.ejs
@@ -1,8 +1,29 @@
-<h1>Thêm mới sản phẩm</h1>
-<form action="" method="post">
-    <% if(obj!= null){%>
-        <p class="mt-2">Tên sản phẩm:</p>
-        <input type="text" class="form-control mt-2 " name="NameCategory" value="<%= obj.NameCategory %>"> <br>
-        <button type="submit">Cập nhật </button>
-        <% } %>
-</form> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+</head>
+
+<body>
+    <div class="text-center">
+        <h1>Update category</h1>
+        <form action="" method="post" class="form-control w-75 m-lg-auto bg-secondary">
+            
+            <% if(obj!=null){%>
+
+                <div class="input-group flex-nowrap mb-1">
+                    <span class="input-group-text" id="addon-wrapping">Loại </span>
+                    <input type="text" class="form-control" placeholder="Loại" aria-label="NameCategory"
+                        aria-describedby="addon-wrapping" name="NameCategory" value="<%= obj.NameCategory %>">
+                </div>
+                <button type="submit" class="btn btn-primary text-center">Update </button>
+                <% } %>
+        </form>
+    </div>
+
+</body>
+
+</html>
