--- a/API/views/product/add-product.ejs
+++ b/API/views/product/add-product.ejs
@@ -1,10 +1,19 @@
-<h1>Thêm mới sản phẩm</h1>
-<form action="" method="post" enctype="multipart/form-data">
-    <p><%= smg  %></p>
-    Tên sản phẩm: <input type="text" name="NameProduct" id="NameProduct"> <br>
-    Giá tiền: <input type="text" name="Price" id="Price"> <br>
-    Size: <input type="text" name="Size" id="Size"> <br>
-    Date: <input type="text" name="Date" id="Date"> <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <title>Document</title>
+</head>
+<body>
+    
+    <h1>Thêm mới sản phẩm</h1>
+<form action="" method="post" enctype="multipart/form-data" class="form-control w-75 m-lg-auto bg-secondary">
+    Tên sản phẩm: <input type="text"  class="form-control" name="NameProduct" id="NameProduct"> <br>
+    Giá tiền: <input type="text"  class="form-control" name="Price" id="Price"> <br>
+    Size: <input type="text"  class="form-control" name="Size" id="Size"> <br>
+    Date: <input type="text"  class="form-control" name="Date" id="Date" placeholder="Exam : 2024-10-03"> <br>
 
     <label for="IDCategory">Danh mục:</label>
     <select id="IDCategory" name="IDCategory" required>
@@ -13,8 +22,11 @@
         <% }); %>
     </select>
 
-    <!-- Category: <input type="text" name="IDCategory" id="IDCategory"> <br> -->
-    Chọn ảnh: <input type="file" name="imgAnh" id="Image"/> <br>
-    Amount: <input type="text" name="Amount" id="Amount"> <br>
-    <button type="submit">Thêm mới</button>
+    Chọn ảnh: <input type="file" name="imgAnh" id="Image" /> <br>
+    
+    Amount: <input type="text" name="Amount" id="Amount" class="form-control" > <br>
+    <p><%= smg  %></p>
+    <button type="submit"  class="btn btn-primary text-center mt-1" >Thêm mới</button>
 </form> 
+</body>
+</html>
