--- a/API/views/product/update-product.ejs
+++ b/API/views/product/update-product.ejs
@@ -4,36 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-    <h1>Sửa sản phẩm</h1>
 
-    <p>
-        <%= smg %>
-    </p>
-    <form action="" method="post">
+    <div class="text-center">
+        <h1>Sửa sản phẩm</h1>
+        <form action="" method="post" class="form-control w-75 m-lg-auto bg-secondary">
 
-        <% if(objDT !=null &&  obj!= null){%>
-            <p class="mt-2">Tên sản phẩm:</p>
-            <input type="text" class="form-control mt-2 " name="NameProduct" value="<%= obj.NameProduct %>"> <br>
-            <p class="mt-2">Giá tiền:</p>
-            <input type="number" class="form-control" name="Price" value="<%= obj.Price %>"> <br>
-            <p class="mt-2">Size :</p>
-            <input type="text" class="form-control" name="Size" value="<%= objDT.Size %>"> <br>
-            <p class="mt-2">Ngày tháng:</p>
-            <input type="text" class="form-control" name="Date" value="<%= objDT.Date %>"> <br>
-            <p class="mt-2">Loại :</p>
-            <input type="text" class="form-control" name="IDCategory" value="<%= obj.IDCategory %>"> <br>
-            <p class="mt-2">Ảnh </p>
-            <input type="text" class="form-control" name="Image" value="<%= obj.Image %>"> <br>
-            <p class="mt-2"> Số lượng :</p>
-            <input type="text" class="form-control" name="Amount" value="<%= objDT.Amount %>"> <br>
-            <button type="submit">Thêm mới</button>
-            <% } %>
 
-    </form>
+            <% if(objDT !=null && obj!=null){%>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Sản phẩm</span>
+                            <input type="text" class="form-control" placeholder="Tên sản phẩm" aria-label="NameProduct"
+                                aria-describedby="addon-wrapping" name="NameProduct" value="<%= obj.NameProduct %>">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Giá tiền</span>
+                            <input type="number" class="form-control" placeholder="Giá tiền" aria-label="Price"
+                                aria-describedby="addon-wrapping" name="Price" value="<%= obj.Price %>">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Size </span>
+                            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                aria-describedby="addon-wrapping" name="Size" value="<%= objDT.Size %>">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Ngày tháng </span>
+                            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                aria-describedby="addon-wrapping" name="Date" value="<%= objDT.Date %>">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Loại</span>
+                            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                aria-describedby="addon-wrapping" name="IDCategory" value="<%= obj.IDCategory %>">
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="input-group flex-nowrap mb-1">
+                            <span class="input-group-text" id="addon-wrapping">Số lượng </span>
+                            <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                aria-describedby="addon-wrapping" name="Amount" value="<%= objDT.Amount %>">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="input-group flex-nowrap mb-1">
+                    <span class="input-group-text" id="addon-wrapping">Ảnh</span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                        aria-describedby="addon-wrapping" name="Image" value="<%= obj.Image %>">
+                </div>
+                <p>
+                    <%= smg %>
+                </p>
+                <button type="submit" class="btn btn-primary text-center">Update </button>
+                <% } %>
+    </div>
+
+
+    </div>
 
 
 </body>
