--- a/API/views/inc/footer.ejs
+++ b/API/views/inc/footer.ejs
@@ -10,9 +10,8 @@
     
       <div class="card">
         <div class="card-body">
-          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          <h5 class="card-title ">Luatdcph35698@fpt.edu.vn</h5>
+          <h5 class="card-title ">Create by Luatdcph35698@fpt.edu.vn</h5>
         </div>
-        <img src="" class="card-img-bottom" alt="...">
+        <img src="https://www.safertecheducation.org/wp-content/uploads/2016/03/footer.png" class="card-img-bottom" alt="...">
       </div>
     <hr>
