--- a/API/views/inc/header.ejs
+++ b/API/views/inc/header.ejs
@@ -15,13 +15,7 @@
                 <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/category">Category</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://localhost:3000/bill">Bill</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://localhost:3000/billDetail">BillDetail</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://localhost:3000/category">Category</a>
+                <a class="nav-link active" aria-current="page" href="http://localhost:3000/account/account">Account</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
