--- a/API/views/product/list-product.ejs
+++ b/API/views/product/list-product.ejs
@@ -15,6 +15,11 @@
                 <button  type="submit" class="btn btn-success w-30">Add new Product </button>
             </a>
         </td>
+        <td>
+            <a href="/apiadmin/thongke">
+                <button  type="submit" class="btn btn-success w-30">Thống kê </button>
+            </a>
+        </td>
         <table border="1" class="table table-bordered border-black w-100">
             <thead>
                 <tr>
