add recharge , add show history,search bill, bill from month
- thêm chức năng nạp tiền
- thêm hiển thị lịch sử mua , lịch sử nạp
- thêm xem lịch sử mua trong tháng
- thêm tìm kiếm ở cửa hàng

--- a/app/src/main/res/layout/dialog_lichsu.xml
+++ b/app/src/main/res/layout/dialog_lichsu.xml
@@ -20,7 +20,9 @@
             android:text="Lịch sử mua hàng "
             android:textColor="#E6903B"
             android:textSize="30dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@+id/title"
+            />
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
