--- a/app/src/main/res/layout/dialog_them_hang.xml
+++ b/app/src/main/res/layout/dialog_them_hang.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         android:background="@drawable/shape_dialog"
         android:orientation="vertical">
         <TextView
@@ -31,7 +31,8 @@
             android:padding="10dp"
             android:id="@+id/list_hang"
             android:layout_width="match_parent"
-            android:layout_height="230dp" />
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
         <EditText
             android:layout_margin="10dp"
