--- a/API/views/inc/header.ejs
+++ b/API/views/inc/header.ejs
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="http://localhost:3000/account/account">Account</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/bill">Bill</a>
+            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/allbill">Bill</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
