--- a/API/views/inc/header.ejs
+++ b/API/views/inc/header.ejs
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/allbill">Bill</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/listRecharge">Recharge</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
