--- a/API/views/account/list-account.ejs
+++ b/API/views/account/list-account.ejs
@@ -28,62 +28,78 @@
 
 <body>
     <%- include('../inc/header') %>
-        <td>
-            <a href="/account/account/add/">
-                <button type="submit" class="btn btn-success w-30" style="margin-right: 10px;">Add new Acount </button>
-            </a>
-            <a href="/account/accountNV">
-                <button type="submit" class="btn btn-success w-30" style="margin-left: 10px;">Nhân Viên </button>
-            </a>
-            <a href="/account/accountKH/">
-                <button type="submit" class="btn btn-success w-30" style="margin-left: 10px;">Khách hàng </button>
-            </a>
-        </td>
-        <table border="1" class="table table-bordered border-black w-100">
-            <thead>
-                <tr>
-                    <th scope="col" style="width: 10%;">Email</th>
-                    <th scope="col" style="width: 10%;">Password</th>
-                    <th scope="col" style="width: 10%;">FullName</th>
-                    <th scope="col" style="width: 10%;">NumberPhone</th>
-                    <th scope="col" style="width: 10%;">Lever</th>
-                    <th scope="col" style="width: 10%;">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% listAC.forEach((row)=> { %>
-                    <tr>
-                        <td>
-                            <%= row.Email %>
-                        </td>
-                        <td>
-                            <%= row.Password %>
-                        </td>
-                        <td>
-                            <%= row.FullName %>
-                        </td>
-                        <td>
-                            <%= row.NumberPhone %>
-                        </td>
-                        <td>
-                            <%= row.Level %>
-                        </td>
-                        <td class="text-center">
-                            <div class="btn-group" role="group">
-                                <a href="/account/account/edit/<%= row._id %>">
-                                    <button type="submit" class="btn btn-warning w-100" style="margin-right: 10px;">Sửa</button>
-                                </a>
-                                <a>
-                                    <button type="button" class="btn btn-danger w-100"
-                                        onclick="handleDelete('<%= row._id %>')" style="margin-left: 10px;">Xóa</button>
-                                </a>
+        <h2 style="text-align: center;">Danh Sách Tài Khoản</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <td>
+                        <a href="/account/account/add/">
+                            <button type="submit" class="btn btn-warning" style="margin-right: 10px;">Add new
+                                Acount </button>
+                        </a>
+                        <a href="/account/accountNV">
+                            <button type="submit" class="btn btn-warning" style="margin-left: 10px;">Nhân Viên
+                            </button>
+                        </a>
+                        <a href="/account/accountKH/">
+                            <button type="submit" class="btn btn-warning" style="margin-left: 10px;">Khách hàng
+                            </button>
+                        </a>
+                    </td>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <table border="1" class="table table-bordered border-black w-100">
+                        <thead>
+                            <tr>
+                                <th scope="col" style="width: 10%;">Email</th>
+                                <th scope="col" style="width: 10%;">Password</th>
+                                <th scope="col" style="width: 10%;">FullName</th>
+                                <th scope="col" style="width: 10%;">NumberPhone</th>
+                                <th scope="col" style="width: 10%;">Lever</th>
+                                <th scope="col" style="width: 10%;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% listAC.forEach((row)=> { %>
+                                <tr>
+                                    <td>
+                                        <%= row.Email %>
+                                    </td>
+                                    <td>
+                                        <%= row.Password %>
+                                    </td>
+                                    <td>
+                                        <%= row.FullName %>
+                                    </td>
+                                    <td>
+                                        <%= row.NumberPhone %>
+                                    </td>
+                                    <td>
+                                        <%= row.Level %>
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="btn-group" role="group">
+                                            <a href="/account/account/edit/<%= row._id %>">
+                                                <button type="submit" class="btn btn-warning w-100"
+                                                    style="margin-right: 10px;">Sửa</button>
+                                            </a>
+                                            <a>
+                                                <button type="button" class="btn btn-danger w-100"
+                                                    onclick="handleDelete('<%= row._id %>')"
+                                                    style="margin-left: 10px;">Xóa</button>
+                                            </a>
 
-                            </div>
-                        </td>
-                    </tr>
-                    <% }) %>
-            </tbody>
-        </table>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <% }) %>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
         <%- include('../inc/footer') %>
 </body>
 
