--- a/API/views/billdetail/bill-tuchoi.ejs
+++ b/API/views/billdetail/bill-tuchoi.ejs
@@ -10,17 +10,18 @@
 
 <body>
     <%- include('../inc/header') %>
+    <h2 style="text-align: center;">Hóa Đơn Bị Từ Chối </h2>
     <div class="container">
         <div class="row">
             <div class="col">
                 <a href="/apiAdmin/billDangXuLy">
-                    <button type="submit" class="btn btn-success" style="margin-right: 10px;"> Đang chờ </button>
+                    <button type="submit" class="btn btn-warning" style="margin-right: 10px;"> Đang chờ </button>
                 </a>
                 <a href="/apiAdmin/billDaDuyet">
-                    <button type="submit" class="btn btn-success" style="margin-left: 10px;"> Đã duyệt </button>
+                    <button type="submit" class="btn btn-warning" style="margin-left: 10px;"> Đã duyệt </button>
                 </a>
                 <a href="/apiAdmin/billTuChoi">
-                    <button type="submit" class="btn btn-success" style="margin-left: 10px;"> Từ chối </button>
+                    <button type="submit" class="btn btn-warning" style="margin-left: 10px;"> Từ chối </button>
                 </a>
             </div>
         </div>
