--- a/API/views/inc/header.ejs
+++ b/API/views/inc/header.ejs
@@ -1,40 +1,62 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<hr>
-</div>
-<div class="mb-2 ">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">WEB Server</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active"   href="http://localhost:3000/apiAdmin/product">Product</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/category">Category</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/account/account">Account</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/allbill">Bill</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/listRecharge">Recharge</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Danh Sách Tài Khoản</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <style>
+        /* Căn giữa nội dung */
+        .navbar-nav {
+            margin: 0 auto;
+        }
+
+        /* Thay đổi màu chữ của thẻ <a> khi được nhấn */
+        .nav-link:focus, .nav-link:active {
+            color: yellow !important;
+        }
+
+    </style>
+</head>
+
+<body>
+    <hr>
+    <div class="mb-2">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">WEB Server</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="http://localhost:3000/apiAdmin/product" style="font-size: 25px;">Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/category"style="font-size: 25px;" >Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/account/account"style="font-size: 25px;">Account</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/allbill"style="font-size: 25px;">Bill</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="http://localhost:3000/apiAdmin/listRecharge"style="font-size: 25px;">Recharge</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </div>
-  </nav>
-</div>
 </body>
 
 </html>
