--- a/API/views/product/list-product.ejs
+++ b/API/views/product/list-product.ejs
@@ -10,56 +10,69 @@
 
 <body>
     <%- include('../inc/header') %>
-        <td>
-            <a href="/apiadmin/product/add/">
-                <button  type="submit" class="btn btn-success w-30">Add new Product </button>
-            </a>
-        </td>
-        <td>
-            <a href="/apiadmin/thongke">
-                <button  type="submit" class="btn btn-success w-30">Thống kê </button>
-            </a>
-        </td>
-        <table border="1" class="table table-bordered border-black w-100">
-            <thead>
-                <tr>
-                    <th scope="col" style="width: 10%;">ID</th>
-                    <th scope="col" style="width: 10%;">Name</th>
-                    <th scope="col" style="width: 10%;">Image</th>
-                    <th scope="col" style="width: 10%;">Price</th>
-                    <th scope="col" style="width: 10%;">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% listSP.forEach((row)=> { %>
-                    <tr>
-                        <td>
-                            <%= row._id %>
-                        </td>
-                        <td>
-                            <%= row.NameProduct %>
-                        </td>
-                        <td class="text-center"><img src="<%= row.Image %>" width="100%" /></td>
-                        <td>
-                            <%= row.Price %>
-                        </td>
-                        <td class="text-center">
-                            <div class="btn-group" role="group">
+    <h2 style="text-align: center;">Sản Phẩm</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <td>
+                        <a href="/apiadmin/product/add/">
+                            <button type="submit" class="btn btn-warning">Add new Product </button>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="/apiadmin/thongke">
+                            <button type="submit" class="btn btn-warning">Thống kê </button>
+                        </a>
+                    </td>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <table border="1" class="table table-bordered border-black w-100">
+                        <thead>
+                            <tr>
+                                <th scope="col" style="width: 10%;">ID</th>
+                                <th scope="col" style="width: 10%;">Name</th>
+                                <th scope="col" style="width: 10%;">Image</th>
+                                <th scope="col" style="width: 10%;">Price</th>
+                                <th scope="col" style="width: 10%;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <% listSP.forEach((row)=> { %>
+                                <tr>
+                                    <td>
+                                        <%= row._id %>
+                                    </td>
+                                    <td>
+                                        <%= row.NameProduct %>
+                                    </td>
+                                    <td class="text-center"><img src="<%= row.Image %>" width="100%" /></td>
+                                    <td>
+                                        <%= row.Price %>
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="btn-group" role="group">
 
-                                <a href="/apiadmin/product/edit/<%= row._id %>">
-                                    <button type="submit" class="btn btn-warning w-100 m-10" style="margin-right: 10px;">Sửa</button>
-                                </a>
-                                
-                                <a href="/apiadmin/product/delete/<%= row._id %>"
-                                    onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?')">
-                                    <button type="submit" class="btn btn-danger w-100"  style="margin-left: 10px;">Xóa</button>
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                    <% }) %>
-            </tbody>
-        </table>
+                                            <a href="/apiadmin/product/edit/<%= row._id %>">
+                                                <button type="submit" class="btn btn-warning w-100 m-10"
+                                                    style="margin-right: 10px;">Sửa</button>
+                                            </a>
+
+                                            <a href="/apiadmin/product/delete/<%= row._id %>"
+                                                onclick="return confirm('Bạn có chắc muốn xóa sản phẩm này?')">
+                                                <button type="submit" class="btn btn-danger w-100"
+                                                    style="margin-left: 10px;">Xóa</button>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <% }) %>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
         <%- include('../inc/footer') %>
 </body>
 
